--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "project": "vite | npm run server",
-    "server": "cd server && npm run start | vite",
+    "project": "yarn server | yarn dev",
+    "server": "cd server && npm run start ",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
